SPM-5 Infrastruktura projektu SPM-11 Vytvořit novou zk-dl 1.5.0 proti ZK8

--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -20,12 +20,12 @@
             <!--<version>6.5.2.2-DATALITE</version>-->
             <version>${org.zkframework.version}-DATALITE</version>
         </dependency>
-        <!-- -->
-        <!--<dependency>-->
-            <!--<groupId>cz.datalite.zk-dl</groupId>-->
-            <!--<artifactId>zkplus</artifactId>-->
-            <!--<version>${cz.datalite.zk-dl.version}</version>-->
-        <!--</dependency>-->
+
+        <dependency>
+            <groupId>cz.datalite.zk-dl</groupId>
+            <artifactId>zkplus</artifactId>
+            <version>${cz.datalite.zk-dl.version}</version>
+        </dependency>
         
     </dependencies>
     
