SPM-11 Vytvořit novou zk-dl 1.5.0 proti ZK8

--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -43,7 +43,14 @@
             <artifactId>DLHelpers</artifactId>
             <version>${cz.datalite.zk-dl.version}</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     
 </project>
