--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -8,7 +8,6 @@
         <version>1.5.0</version>
     </parent>
 
-    <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>HibernateDAO</artifactId>
     <packaging>jar</packaging>
     <version>1.5.0</version>
@@ -26,7 +25,8 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.3.2.Final</version>
+            <!--<version>4.3.2.Final</version>-->
+            <version>5.1.3.Final</version>
         </dependency>
     
         <dependency>
