--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 		Multiple loosely coupled modules which extend ZK framework, originally created by DataLite company.
 
-		ZKComposer - controll the MVC design with annotations @ZkEvent?, @ZkComponent?, @ZkBinding?, ... (similar to
+		ZKComposer - controll the MVC design with annotations &#64;ZkEvent, &#64;ZkComponent, &#64;ZkBinding, ... (similar to
 		zkspring or zkcdi projects, however without any framework dependencies).
 
 		ZKDLComponents splits ZK data driven components (listbox, combobox) to MVC design, adds support for easy large
@@ -21,8 +21,8 @@
 		HibernateDAO &amp; ZKDLComponentsHibernateExtensions - Hibernate generic DAO design with extensions for
 		ZKDLComponents to replace all your plumbing code (filter, sort, lazy loading, CRUD).
 
-		SpringService? - service layer with spring - generic service which speaks to generic DAO. This is the way we use
-		our components at DataLite?, but you can use any integration or DAO at your will.
+		SpringService - service layer with spring - generic service which speaks to generic DAO. This is the way we use
+		our components at DataLite, but you can use any integration or DAO at your will.
 	</description>
 	<url>http://zk.datalite.cz</url>
 
