--- a/SpringService/pom.xml
+++ b/SpringService/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>SpringService</artifactId>
-    <version>1.4.5.15</version>
+    <version>1.4.5.16</version>
     <name>SpringService</name>
     <description>Generic Spring service, which talks to Generic Hibernate DAO. Use for classical 3-layered architecture ZK - Spring - Hibernate.</description>
 
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>HibernateDAO</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
+            <version>${cz.datalite.zk-dl.version}.6</version>
         </dependency>
         
         <dependency>
