lokalizovat "Vyberte profil" na správci profilů

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -80,6 +80,7 @@ listbox.profileManager.profile.public=Public profile
 listbox.profileManager.profile.private=Private profile
 listbox.profileManager.profile.category=Category
 listbox.profileManager.profile.default=My Default profile
+listbox.profileManager.profile.watermark=Select profile
 listbox.profileManager.profile.saveColumnModel=Save current column settings
 listbox.profileManager.profile.saveColumnModel.tooltip=If checked, save into profile current column settings as visible on active page.
 listbox.profileManager.profile.saveFilterModel=Save current filter settings
