lokalizovat "Editovat profilu" na správci profilů

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -76,6 +76,7 @@ listbox.profileManager.delete=Delete
 listbox.profileManager.delete.tooltip=Delete profile
 listbox.profileManager.delete.confirm=Do you really want to delete profile {0}?
 listbox.profileManager.profile.name=Profile name
+listbox.profileManager.profile.edit=Edit profile
 listbox.profileManager.profile.public=Public profile
 listbox.profileManager.profile.private=Private profile
 listbox.profileManager.profile.category=Category
