--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -77,6 +77,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
