priprava pom na deploy na maven central

--- a/HibernateDAO/pom.xml
+++ b/HibernateDAO/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <groupId>cz.datalite</groupId>
         <artifactId>zk-dl</artifactId>
-        <groupId>cz.datalite.zk-dl</groupId>
         <version>1.4.5.1</version>
     </parent>
 
@@ -14,6 +14,13 @@
     <version>1.4.5.11</version>
     <name>Hibernate DAO</name>
     <description>Yet another Hibernate DAO, what is unique is support of our data driven components. With this DAO, you can bind components like listbox to the database with 10 lines of code :).</description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <dependencies>
     
