--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>cz.datalite</groupId>
         <artifactId>zk-dl</artifactId>
-        <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.5</version>
+        <version>1.4.5.1</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
@@ -11,6 +11,13 @@
     <version>1.4.5.6</version>
     <name>DLHelpers</name>
     <description>Helpers - everyone needs to have some package like this, please feel free to explore it's internals and use anything you want.</description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
