--- a/ZKDLComponents/pom.xml
+++ b/ZKDLComponents/pom.xml
@@ -2,15 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
+        <groupId>cz.datalite</groupId>
         <artifactId>zk-dl</artifactId>
-        <groupId>cz.datalite.zk-dl</groupId>
-        <version>1.4.5</version>
+        <version>1.4.5.1</version>
     </parent>
 
+    <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>ZKDLComponents</artifactId>
     <version>1.4.5.36</version>
     <name>ZKDLComponents</name>
     <description>Data driven components with UI controlls - listbox, lovbox, combobox.</description>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <dependencies>
         
