priprava pom na deploy na maven central

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,9 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <homedir>/var/lib/jenkins/.gnupg/</homedir>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
