--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
                                 </goals>
                                 <configuration>
                                     <homedir>/var/lib/jenkins/.gnupg/</homedir>
+                                    <useAgent>false</useAgent>
                                 </configuration>
                             </execution>
                         </executions>
