--- a/ZKComposer/pom.xml
+++ b/ZKComposer/pom.xml
@@ -15,8 +15,9 @@
 
     <licenses>
         <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
 
