--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -56,6 +56,8 @@ listbox.exportManager.sheetName=Sheet name
 listbox.exportManager.fileName=File name
 listbox.exportManager.wait=Please wait ...
 
+listbox.exportManager.error.rows.message=Please enter number of rows to be exported (0 = all, max = {0})
+
 listbox.paging.noData=No data available
 listbox.paging.outOfRange=Selected page is out of range...
 
