--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -57,6 +57,7 @@ listbox.exportManager.fileName=File name
 listbox.exportManager.wait=Please wait ...
 
 listbox.exportManager.error.rows.message=Please enter number of rows to be exported (0 = all, max = {0})
+listbox.exportManager.error.fileName.message=Please enter name of the exported file
 
 listbox.paging.noData=No data available
 listbox.paging.outOfRange=Selected page is out of range...
