SPM-1403 Taby detail obj.: po obnoveni vsech se nezobrazuji data.
Merge ZK parent, ZK-DL, ZK-DL-private a ZKDLDesktop master->1.5.X
+ oprava merge (ZK8)

Zvednutí verzí modulů

Smazání modulu Selenium (nepoužíváno)

--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>zk-dl</artifactId>
 		<groupId>cz.datalite.zk-dl</groupId>
-		<version>1.5.0</version>
+		<artifactId>zk-dl</artifactId>
+		<version>1.5.1</version>
 	</parent>
 
 	<artifactId>DLHelpers</artifactId>
@@ -13,6 +13,14 @@
 	<description>Helpers - everyone needs to have some package like this, please feel free to explore it's internals and
 		use anything you want.
 	</description>
+
+	<licenses>
+		<license>
+			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
