--- a/ZKDLTutorial/pom.xml
+++ b/ZKDLTutorial/pom.xml
@@ -15,6 +15,13 @@
         <artifactId>dl-zk-spring</artifactId>
         <version>1.4.1-SNAPSHOT</version>
     </parent>
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
