--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -4,14 +4,22 @@
     <parent>
         <groupId>cz.datalite.zk-dl</groupId>
         <artifactId>zk-dl</artifactId>
-        <version>1.5.0</version>
+        <version>1.5.1</version>
     </parent>
 
     <artifactId>DLBind</artifactId>
-    <version>1.5.0</version>
+    <version>1.5.1</version>
     <name>DLBind</name>
     <description>Binder module provides additional functionality to ZKBind.</description>
-    
+
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <dependencies>
 
         <dependency>
