--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -5,15 +5,23 @@
 	<parent>
 		<artifactId>zk-dl</artifactId>
 		<groupId>cz.datalite.zk-dl</groupId>
-		<version>1.5.0</version>
+		<version>1.5.1</version>
 	</parent>
 
 	<artifactId>ZKDLComponentsHibernateExt</artifactId>
-	<version>1.5.0</version>
+	<version>1.5.1</version>
 	<name>ZKDLComponentsHibernateExt</name>
 	<description>The actual interface between ZKComponents and HibernateDAO. It contains mainly
 		DLListboxCriteriaController.
 	</description>
+
+	<licenses>
+		<license>
+			<name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+			<url>http://www.gnu.org/licenses/lgpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
