--- a/zkbind/pom.xml
+++ b/zkbind/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.zkoss.zk</groupId>
 	<artifactId>zkbind</artifactId>
 	<packaging>jar</packaging>
-	<version>8.0.0.FL.20150504-Eval-DATALITE</version>
+	<version>8.5.0-DATALITE</version>
 	<name>ZK Bind</name>
 	<url>http://www.zkoss.org/zkbind</url>
 	<description>ZK Bind</description>
