--- a/zkbind/pom.xml
+++ b/zkbind/pom.xml
@@ -5,13 +5,13 @@
 	<groupId>org.zkoss.zk</groupId>
 	<artifactId>zkbind</artifactId>
 	<packaging>jar</packaging>
-	<version>8.6.0.FL.20181026-Eval-DATALITE</version>
+	<version>8.5.0-DATALITE</version>
 	<name>ZK Bind</name>
 	<url>http://www.zkoss.org/zkbind</url>
 	<description>ZK Bind</description>
 
 	<properties>
-		<project.zk.version>8.6.0.FL.20181026-Eval</project.zk.version>
+		<project.zk.version>8.5.0</project.zk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
