--- a/DLBind/pom.xml
+++ b/DLBind/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cz.datalite</groupId>
+        <groupId>cz.datalite.zk-dl</groupId>
         <artifactId>zk-dl</artifactId>
-        <version>1.4.5.1</version>
+        <version>1.4.6</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>DLBind</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.6</version>
     <name>DLBind</name>
     <description>Binder module provides additional functionality to ZKBind.</description>
 
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>zkplus</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
+            <version>1.4.5</version>
         </dependency>
         
     </dependencies>
