--- a/DLHelpers/pom.xml
+++ b/DLHelpers/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <groupId>cz.datalite.zk-dl</groupId>
         <artifactId>zk-dl</artifactId>
-        <version>1.4.5.1</version>
+        <version>1.4.6</version>
     </parent>
 
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>DLHelpers</artifactId>
-    <version>1.4.5.9</version>
+    <version>1.4.6</version>
     <name>DLHelpers</name>
     <description>Helpers - everyone needs to have some package like this, please feel free to explore it's internals and use anything you want.</description>
 
@@ -82,6 +82,12 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${javax.xml.bind.version}</version>
         </dependency>
     </dependencies>
 
