--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.datalite.zk-dl</groupId>
     <artifactId>zk-dl</artifactId>
-    <version>1.4.5.1</version>
+    <version>1.4.6</version>
     <packaging>pom</packaging>
     <name>DataLite ZKoss framework extension library</name>
     <description>
@@ -51,11 +51,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netbeans.hint.license>LGPL</netbeans.hint.license>
         <org.zkframework.version>6.5.2</org.zkframework.version>
-        <org.springframework.version>3.2.3.RELEASE</org.springframework.version>
-        <org.hibernateframework.version>4.2.0.Final</org.hibernateframework.version>
-        <cz.datalite.zk-dl.version>1.4.5</cz.datalite.zk-dl.version>
+        <org.springframework.version>5.1.3.RELEASE</org.springframework.version>
+        <org.springframework.portlet.version>3.2.3.RELEASE</org.springframework.portlet.version>
+        <org.hibernateframework.version>5.2.17.Final</org.hibernateframework.version>
+        <cz.datalite.zk-dl.version>1.4.6</cz.datalite.zk-dl.version>
         <org.slf4j.version>1.7.5</org.slf4j.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+        <javax.xml.bind.version>2.3.0</javax.xml.bind.version>
     </properties>
 
     <licenses>
