--- a/ZKDLComponentsHibernateExt/pom.xml
+++ b/ZKDLComponentsHibernateExt/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>cz.datalite.zk-dl</groupId>
             <artifactId>HibernateDAO</artifactId>
-            <version>${cz.datalite.zk-dl.version}</version>
+            <version>${cz.datalite.zk-dl.version}.1</version>
         </dependency>
 
         <dependency>
