Doplnění položky "permissionName" pro určení role, kterou musí mít uživatel, aby mohl editovat příslušný profil

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents.properties
@@ -82,6 +82,7 @@ listbox.profileManager.profile.name=Profile name
 listbox.profileManager.profile.edit=Edit profile
 listbox.profileManager.profile.public=Public profile
 listbox.profileManager.profile.private=Private profile
+listbox.profileManager.profile.permission=Profile with permissions
 listbox.profileManager.profile.category=Category
 listbox.profileManager.profile.default=My Default profile
 listbox.profileManager.profile.watermark=Select profile
@@ -91,3 +92,4 @@ listbox.profileManager.profile.saveFilterModel=Save current filter settings
 listbox.profileManager.profile.saveFilterModel.tooltip=If checked, save into profile current filter settings as visible on active page.
 listbox.profileManager.profile.short.public=C
 listbox.profileManager.profile.short.private=P
+listbox.profileManager.profile.short.permission=R
